--- a/RandoNuit.html
+++ b/RandoNuit.html
@@ -14,6 +14,15 @@
 
     <main>
 
+        <img src="./ganapathy-kumar-GLmhbqbn1WA-unsplash 1.png" class="ganapathy">
+        <div class="gradient1"></div>
+        <div class="circlegradient1"></div>
+        <div class="circlegradient2"></div>
+        <div class="circlegradient3"></div>
+        <div class="circlegradient4"></div>
+        <img src="./jj-shev--ORi52De4F8-unsplash 2.png" class="jjshev">
+        <div class="gradient2"></div>
+
         <div class="grostitre">
             <h1>Rando Nuit</h1>
             <h3>organisation de randonnée de nuits</h3>
@@ -47,6 +56,30 @@
             <img src="./person2.jpg" alt="Clément Capot" id="person2"> 
             <img src="./person3.jpg" alt="Sacha Machoix" id="person3">
             <img src="./person4.jpg" alt="Bryce Platane" id="person4">
+        </div>
+
+        <div class="sectioncomm">
+            <h1>Ils vous raconte</h1>
+            <h3>Lisez leur expériences.</h3>
+                <div class="squarecomm">
+                    <div class="commentaires">
+                        <p>Elementum mi felis, sit velit lobortis ultricies non. Mattis enim, nisl
+                        adipiscing natoque diam et. Cum posuere in velit massa sagittis augue egestas. Eu sollicitudin et quam eu. Nunc, sed imperdiet blandit morbi. Maecenas lobortis tristique rutrum.<br/><img src="./user.jpg" class="commentaires"></p> <p>JUDITH ROSE</p>
+                    </div>
+                    <div class="commentaires">
+                        <p>Elementum mi felis, sit velit lobortis ultricies non. Mattis enim, nisl
+                        adipiscing natoque diam et. Cum posuere in velit massa sagittis augue egestas. Eu sollicitudin et quam eu. Nunc, sed imperdiet blandit morbi. Maecenas lobortis tristique rutrum.<br/><img src="./user.jpg" class="commentaires"></p> <p>JUDITH ROSE</p>
+                    </div>
+                    <div class="commentaires">
+                        <p>Elementum mi felis, sit velit lobortis ultricies non. Mattis enim, nisl
+                        adipiscing natoque diam et. Cum posuere in velit massa sagittis augue egestas. Eu sollicitudin et quam eu. Nunc, sed imperdiet blandit morbi. Maecenas lobortis tristique rutrum.<br/><img src="./user.jpg" class="commentaires"></p> <p>JUDITH ROSE</p>
+                    </div>
+                    <div class="commentaires">
+                        <p>Elementum mi felis, sit velit lobortis ultricies non. Mattis enim, nisl
+                        adipiscing natoque diam et. Cum posuere in velit massa sagittis augue egestas. Eu sollicitudin et quam eu. Nunc, sed imperdiet blandit morbi. Maecenas lobortis tristique rutrum.<br/><img src="./user.jpg" class="commentaires"></p> <p>JUDITH ROSE</p>
+                    </div>
+                </div>
+            <h1>À très vite !</h1>
         </div>
 
     </main>
